tests/fail/fail_array_size_too_large.kr
fn inisiu() {
    nter [100000000]a = [0] * 100000000;
    mostran(a[0]);
}
